# libdeepcolorize

./: .gitignore  CMakeLists.txt  LICENSE  environment.yml  main.cpp
ideepcolor/: ideepcolor.py  main.py  setup.py
ideepcolor/data/: colorize_image.py
ideepcolor/models/pytorch/: model.py
ideepcolor/modules/fasttiff/: fasttiff.c  tif_lzw.c
src/: colorize_image.cpp  colorize_image.hpp
